<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="16dp">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="Welcome to FitFlow"
            android:textColor="#113A3A"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="To Continue, Sign Up"
            android:textColor="#113A3A"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/signUpText"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/name"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/nameInput"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/emailInput"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordInput"
            android:layout_alignStart="@+id/passwordInput"
            android:layout_alignEnd="@+id/passwordInput"
            android:layout_marginStart="79dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="#113A3A"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


    </RelativeLayout>

</ScrollView>